// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RatingUtils RatingUtils - buildDRtg 1`] = `
{
   "stl": 30,
   "blk": 5,
   "drb": 96,
   "pfPct": 0.15789473684210525,
   "playerRtg": 105.86789969595162,
   "playerDelta": 1.7545855257825025,
   "scPossConceded": 0.48933399202505,
   "noShotCredit": 32.260450315336996,
   "reboundCredit": 34.59731465653162,
   "missFtCredit": 2.5382812499999994,
   "stopsIndPct": 0.19384370453035926,
   "stopsTeamPct": 0.3168223034445907,
   "teamBlk": 108,
   "oppoPts": 1738,
   "oppoPoss": 1790,
   "oppoFga": 1588,
   "oppoFgm": 637,
   "oppoFtm": 270,
   "oppoFta": 384,
   "oppoFtPoss": 182.39999999999998,
   "oppoTov": 312,
   "teamStl": 126,
   "teamDrb": 726,
   "opponentOrbPct": 0.274,
   "opponentFgPct": 0.40113350125944586,
   "teamOrbCreditToDefender": 0.29122292191435767,
   "teamOrbCreditToRebounder": 0.16408942065491183,
   "teamDvsRebCredit": 0.6396113056611289,
   "oppoFgMiss": 843,
   "oppoNonStlTov": 186,
   "teamMissWeight": 0.45209006306739913,
   "oppoFtPct": 0.703125,
   "oppoFtHitOnePlus": 166.32421874999997,
   "oppoProbFtHitOnePlus": 0.911865234375,
   "oppoScPoss": 803.32421875,
   "oppoPtsPerScore": 2.163510024264409,
   "teamRtg": 97.09497206703911,
   "dRtg": 98.84955759282161,
   "offSos": 108.03972067039106,
   "avgEff": 100,
   "adjDRtg": 91.49371821720374,
   "adjDRtgPlus": -1.7012563565592531
}
`;

exports[`RatingUtils RatingUtils - buildORtg 1`] = `
{
   "rawFga": 356,
   "rawFgx": 217,
   "rawFgm": 139,
   "ptsFgm": 334,
   "rawFtm": 172,
   "rawAssist": 147,
   "rawAssistInfo": [
      "70",
      "10",
      "67"
   ],
   "rawPts": 506,
   "rawOrb": 17,
   "rawTo": 69,
   "raw3Fga": 174,
   "raw2midFga": 65,
   "raw2rimFga": 117,
   "raw3Fgm": 56,
   "raw2midFgm": 18,
   "raw2rimFgm": 65,
   "teamOrb": 310,
   "teamPts": 1937,
   "teamFga": 1550,
   "teamFgm": 643,
   "teamFta": 579,
   "teamFtPct": 0.7564766839378239,
   "teamOrbPct": 0.3150406504065041,
   "teamTo": 299,
   "teamPoss": 1802,
   "eFG": 0.4691011235955056,
   "teamPtsPerScore": 2.175419074119295,
   "teamFtHitOnePlus": 247.4031517624634,
   "teamProbFtHitOnePlus": 0.9406963945340815,
   "rosterOrb": 0,
   "teamOrbCreditToRebounder": 0.2887736570583408,
   "teamOrbCreditToScorer": 0.18222190606216335,
   "teamScoreFromReboundPct": 0,
   "teamOrbWeight": 0.6131133277458456,
   "othersAssist": 214,
   "otherEfg": 0.48785594639866,
   "otherEfgInfo": [
      "48.8",
      "48.8",
      "48.8"
   ],
   "otherPtsPerFgm": 2.3115079365079363,
   "teamOrbContribPct": 0,
   "teamScoredPlayPct": 0.4215924014026815,
   "teamAssistRate_Classic": 0.3794090202177294,
   "ppFgTeamAstPct_Classic": 0.08899059884320337,
   "teamAssistRate": 0.37410071942446044,
   "ppFgTeamAstPct": 0.09475178477907331,
   "teamAssistedEfg": 0.5065576186265842,
   "ptsProd": 569.559794669086,
   "ppOrb": 9.55928445518132,
   "ppAssist": 88.78978224455611,
   "ppAssist_Classic": 82.88469256002232,
   "ppFg": 299.2107279693486,
   "ftPoss": 96.29706390328151,
   "actualFtaToPoss": 0.4542314335060449,
   "ftPct": 0.8113207547169812,
   "missedBothFTs": 0.03559985760056958,
   "offPlaysLessPoss": 69.81254009375766,
   "offPoss": 451.4845238095238,
   "fgPart": 125.8295019157088,
   "ftPart": 92.86890214097176,
   "astPart": 35.8574120603015,
   "astPart_Classic": 35.857412060301506,
   "orbPart": 4.394226642998126,
   "teamScoringPoss": 890.4031517624634,
   "teamPlays": 2112,
   "adjPoss": 475.2289159044038,
   "scoringPoss": 258.9500427599802,
   "fgxPoss": 143.85071138211381,
   "ftxPoss": 3.428161762309771,
   "oRtg": 119.84956630535876,
   "oRtg_Classic": 119.47176661703918,
   "defSos": 96.60184357541898,
   "avgEff": 100,
   "SD_at_Usage": 9.225388241385453,
   "SDs_Above_Mean": 2.1516239518585065,
   "SD_at_Usage_20": 10.143,
   "Regressed_ORtg": 121.82392174370084,
   "Usage": 26.37230387926769,
   "Usage_Bonus": 7.965379849084613,
   "adjORtg": 134.3548909513889,
   "adjORtgPlus": 6.870978190277782
}
`;

exports[`RatingUtils RatingUtils - buildOnBallDefenseAdjustmentsPhase1 1`] = `
{
   "playerRebCredit": 0.09664054373332856,
   "teamRebCredit": 0.14616882239665946,
   "comboRebCredit": 0.2948067270155614,
   "playerTargetPoss": 185.586,
   "targetedPct": 0.12134831460674157,
   "playerPtsPerScore": 2.4291266575217194,
   "onBallStopCredit": 0.4668039520787198,
   "offBallPoss": 1572.7865168539327,
   "offBallPts": 1539.0286760055637,
   "otherRebounds": 631.6805699093197,
   "otherRebCredit": 0.14474344317512738,
   "offBallStopCredit": 0.39516433361719344,
   "onVsOffBallWeight": 0.4,
   "weightedPtsPerScore": 2.126826397164934,
   "onBallCreditWeight": 0.04853932584269663,
   "offBallCreditWeight": 0.13179775280898876,
   "comboBallStopCredit": 0.8290444280732188,
   "unadjDRtg": 103.9658869175629,
   "weightedClassicDRtgMean": 0,
   "weightedUnadjDRtgMean": 0,
   "uncategorizedAdjustment": 0,
   "adjustedPossPct": 0,
   "dRtg": 0,
   "adjDRtg": 0,
   "adjDRtgPlus": 0
}
`;

exports[`RatingUtils RatingUtils - injectOnBallDefenseAdjustmentsPhase2 1`] = `
{
   "playerRebCredit": 0.09664054373332856,
   "teamRebCredit": 0.14616882239665946,
   "comboRebCredit": 0.2948067270155614,
   "playerTargetPoss": 185.586,
   "targetedPct": 0.12134831460674157,
   "playerPtsPerScore": 2.4291266575217194,
   "onBallStopCredit": 0.4668039520787198,
   "offBallPoss": 1572.7865168539327,
   "offBallPts": 1539.0286760055637,
   "otherRebounds": 631.6805699093197,
   "otherRebCredit": 0.14474344317512738,
   "offBallStopCredit": 0.39516433361719344,
   "onVsOffBallWeight": 0.4,
   "weightedPtsPerScore": 2.126826397164934,
   "onBallCreditWeight": 0.04853932584269663,
   "offBallCreditWeight": 0.13179775280898876,
   "comboBallStopCredit": 0.8290444280732188,
   "unadjDRtg": 103.9658869175629,
   "weightedClassicDRtgMean": 98.84955759282161,
   "weightedUnadjDRtgMean": 107.19011038664136,
   "uncategorizedAdjustment": -7.10724422350558,
   "adjustedPossPct": 0.08000000000000002,
   "dRtg": 96.85864269405732,
   "adjDRtg": 89.6509562344713,
   "adjDRtgPlus": -2.069808753105741
}
`;

exports[`RatingUtils RatingUtils - injectUncatOnBallDefenseStats 1`] = `
[
   {
      "code": "Code1",
      "title": "#1 Player1",
      "pts": 170,
      "plays": 216,
      "scorePct": 32.4,
      "tovPct": 15.7,
      "fgMiss": 111,
      "totalPts": 1554,
      "totalScorePct": 39.1,
      "totalPlays": 1780,
      "uncatPts": 734,
      "uncatPlays": 787,
      "uncatScorePct": 44.455654383735705,
      "uncatPtsPerScPlay": 2.097946070781385
   },
   {
      "code": "Code2",
      "title": "#02 Player2",
      "pts": 159,
      "plays": 170,
      "scorePct": 41.2,
      "tovPct": 11.8,
      "fgMiss": 79,
      "totalPts": 1554,
      "totalScorePct": 39.1,
      "totalPlays": 1780,
      "uncatPts": 734,
      "uncatPlays": 787,
      "uncatScorePct": 44.455654383735705,
      "uncatPtsPerScPlay": 2.097946070781385
   },
   {
      "code": "Code3",
      "title": "#13 Player3",
      "pts": 151,
      "plays": 169,
      "scorePct": 37.3,
      "tovPct": 16,
      "fgMiss": 78,
      "totalPts": 1554,
      "totalScorePct": 39.1,
      "totalPlays": 1780,
      "uncatPts": 734,
      "uncatPlays": 787,
      "uncatScorePct": 44.455654383735705,
      "uncatPtsPerScPlay": 2.097946070781385
   },
   {
      "code": "Code4",
      "title": "#99 Player4",
      "pts": 109,
      "plays": 107,
      "scorePct": 39.3,
      "tovPct": 12.1,
      "fgMiss": 52,
      "totalPts": 1554,
      "totalScorePct": 39.1,
      "totalPlays": 1780,
      "uncatPts": 734,
      "uncatPlays": 787,
      "uncatScorePct": 44.455654383735705,
      "uncatPtsPerScPlay": 2.097946070781385
   },
   {
      "code": "Code5",
      "title": "#21 Player5",
      "pts": 103,
      "plays": 148,
      "scorePct": 31.8,
      "tovPct": 14.9,
      "fgMiss": 79,
      "totalPts": 1554,
      "totalScorePct": 39.1,
      "totalPlays": 1780,
      "uncatPts": 734,
      "uncatPlays": 787,
      "uncatScorePct": 44.455654383735705,
      "uncatPtsPerScPlay": 2.097946070781385
   },
   {
      "code": "Code6",
      "title": "#66 Player6",
      "pts": 52,
      "plays": 88,
      "scorePct": 26.1,
      "tovPct": 11.4,
      "fgMiss": 54,
      "totalPts": 1554,
      "totalScorePct": 39.1,
      "totalPlays": 1780,
      "uncatPts": 734,
      "uncatPlays": 787,
      "uncatScorePct": 44.455654383735705,
      "uncatPtsPerScPlay": 2.097946070781385
   },
   {
      "code": "Code7",
      "title": "Player 7",
      "pts": 76,
      "plays": 95,
      "scorePct": 32.6,
      "tovPct": 14.7,
      "fgMiss": 50,
      "totalPts": 1554,
      "totalScorePct": 39.1,
      "totalPlays": 1780,
      "uncatPts": 734,
      "uncatPlays": 787,
      "uncatScorePct": 44.455654383735705,
      "uncatPtsPerScPlay": 2.097946070781385
   }
]
`;
